--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -2,7 +2,7 @@ Lämpöpumppujen ja aurinkosähköjärjestelmien merkitys sähköverkossa kasvaa
 
 Aurinkosähköjärjestelmien määrän kasvu lisää sähköverkon tuotannon ailahtelevuutta ja säätövoiman tarvetta, sillä tuotanto vaihtelee tunneittain. Tuotantoa voidaan ennustaa sääennusteen pohjalta, mutta yksittäiset pilvet voivat aiheuttaa aluellisesti nopeitakin tehovaihteluita. Lisäksi huipputeho sijoittuu päiväsaikaan, joten ihmisten palatessa töistä ja kulutuksen kasvaessa tuotannon laskiessa samanaikaisesti säätötehon tarve kasvaa entisestään. 
 
-Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan märittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynnistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämpöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpumpulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
+Lämpöpumppujen lisääntyminen ja esimerikiksi suorasta sähkölämmityksestä eroava käyttäytyminen vaikuttavat sähköverkkoon. Lämpöpumppujen tekniikka kehittyy ja nykyisin kotitalouskäyttöön myytävissä pumpuissa on yleensä suoraan verkkoon kytketyn oikosulkumoottorin tilalla taajuusmuuttajakäyttöinen oikosulkumoottori. Tämä kehitys myös osaltaan määrittelee miten verkkoon liitettyjen lämpöpumppujen määrän kasvu vaikuttaa sähköverkkoon. Ilman taajuusmuuttajaa tai pehmokäynnistintä verkkoon kytketyt lämpöpumput ottavat käynnistyessään verkosta suuria hetkellisiä tehoja, mikä saattaa jännitejäykkyydeltään huonossa verkossa aiheuttaa hetkellisiä jännitteenalenemia. Lämpöpumpun ollessa taajuusmuuttajakäyttöinen, ei se aiheuta edellämainittuja tehonkulutuksen piikkejä. Kuitenkin mikäli lämpöpumpulla korvataan jokin muu lämmitysmuoto, kuin suora sähkölämmitys, kasvattaa se kulutuspaikan energiankulutusta. Mikäli muuntopiirissä moni talous vaihtaa lämmitysmuodokseen lämpöpumpun, saattaa se aiheuttaa tarpeen sähköverkon jännitejäykkyyden parantamiselle.
 
 Järjestelmien tuomia haasteita voidaan ratkaista ja löytää uusia järjestelmiä hyödyntäviä sovelluksia, kun kommunikaatio niiden kanssa mahdollista. Kommunikointi mahdollistetaan standardoiduilla kommunikaatiorajapinnoilla, joiden kautta järjestelmiä voidaan ohjata. Tällöin ne voidaan kytkeä esimerkiksi kiinteistöautomaatioon tai muuhun ulkoiseen ohjaukseen. Valmistajien suljetut pilvipalvelut muodostavat myös erään rajapinnan kommunikaatiolle, joihin pääsy on usein vain valmistajalla ja järjestelmän omistajalla. 
 
@@ -12,8 +12,12 @@ Aurinkosähköjärjestelmien ja energiavarastojen osalta työssä tarkasteltiin 
 
 Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausrajapintaa tai Saksalaista EVU-Sperre-ohjausrajapintaa käyttävät sovellukset taas keskittyvät yhden lämpöpumpun sijasta useamman pumpun muodostamaan pooliin. Lämpöpumpupoolin ohjaamista voidaan käyttää erilaisiin sovelluksiin kuten huipputehon rajoittamiseen verkossa tai sähköntuotannon ja -kulutuksen tasapainottamiseen. Aggregaattorin hallinnoimaa lämpöpumppupoolia voidaan käyttää esimerkiksi kysyntäjouston tehokkaaseen toteuttamiseen. Aggregaattorille lämpöpumpupoolin ohjaaminen taas on pääasiallista liiketoimintaa, jolla se osallistuu sähkömarkkinoille.
 
-Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa vain aurinkosähköjärjestelmiin. Järjestelmän omistaja ja laitteiston valmistaja voivat hyödyntää valmistajan pilvipalvelua etäohjaukseen ja järjestelmän monitorointiin. Verkonhaltija voi taas käyttää AMI-mittareiden tarjoamaa rajapintaa huoltotöiden aikaiseen tuotannon alasajoon. Aggregaattori pystyy tarjoamaan kysyntäjoustoa sähkömarkkinoille esimerkiksi integroimalla verkkovoimalaitokseen AMI-mittareiden kuormanohjausreleitä tai eri valmistajien pilvipalveluita. Paikallisia, fyysisiä rajapintoja voi hyödyntää kiinteistöautomaatio, joka voi olla kiinteistölle räätälöitävä ohjausjärjestelmä tai vaihtoehtoisesti palveluna toimitettu valmis ohjausjärjestelmä.
+Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa vain aurinkosähköjärjestelmiin. Muut sidosryhmät hyödyntävät eri kommunikaatiorajapintoja eri tarkoituksiin, joista osalle niiden käyttö voi olla myös yrityksen ydinliiketoimintaa.
 
-Tärkeimmiksi sovelluksiksi näimme järjestelmien etäohjauksen ja -monitoroinnin, kysyntäjouston, aurinkosähkön kustannustehokkaan hyödyntämisen sekä loistehon kompensoinnin. Etäohjaus ja -monitorointi mahdollistaa tuotannon tarkkailun sekä vikatilojen selvittämisen etänä, mutta myös monien muiden sovellusten kehittämisen. Kysyntäjousto voidaan jakaa aggregaattorin hallinnoimiin verkkovoimalaitoksiin ja huipputehon rajoittamiseen. Tämä sovellus on sähköverkon kannalta tärkein, sillä se mahdollistaa uusiutuvien energianlähteiden suuremman määrän verkossa, mutta myös verkon tehokkaamman hyödyntämisen käyttöpistekohtaista tehoa säätämällä. 
+Rajapinnat mahdollistavat useita sovelluksia, mutta kaikki käsitellyt sovellukset eivät vielä ole yleistyneet Suomessa. Etämonitorointi ja -hallinta on ollut jo pidempään käytössä pilvipalveluiden muodossa, ja kiinteistöautomaatio yleistyy kotitalouksissa energiansäästötarkoituksessa. 
 
-Aurinkosähkön kustannustehokas hyödyntäminen on lähtöisin kuluttajan tuottohinnan ja ostohinnan erosta, jolloin tuotettu sähkö on järkevämpää hyödyntää itse kuin myydä verkkoon. Loistehon kompensaatiosta hyötyvät eniten teollisuusyritykset, jotka tarvitsevat joka tapauksessa tuotantolaitteiden tehokertoimen takia loistehon kompensointia. Suurilla inverttereillä voidaan kompensoinnin lisäksi pienentää ostosähkön määrää, jolloin järjestelmän takaisinmaksuaika on lyhyempi kuin perinteisillä kompensointimenetelmillä.
+Kysyntäjousto on vasta yleistymässä Suomessa, sillä aggregaattoreita ei Suomessa oikeastaan ole. Itsenäisen aggregaattorin laajennettu pilotti käynnistyi 21.7.2020, ja siinä testataan aiemmin kokeiltujen ratkaisujen skaalautuvuutta. Fingrid on ajamassa tätä kaikille säätösähkömarkkinoille avointa pilottia eteenpäin.
+
+Teollisuuslaitosten tarvitsemia loistehon kompensaattoreita voidaan tulevaisuudessa korvata aurinkosähköjärjestelmillä, sillä suuritehoiset invertterit voivat tuottaa nimellistehollaan myös loistehoa ympäri vuorokauden. Tällöin kalliiden loistehon kompensaattoreiden takaisinmaksuaikaa voidaan pienentää, kun sitä voidaan hyödyntää myös sähköntuotantoon.
+
+Kommunikaatiorajapintojen hyödyntäminen vaatii vahvaa standardointia, jotta järjestelmät olisivat valmistajasta riippumattomia. Järjestelmien fyysisten rajapintojen osalta tämä alkaa olla jo hyvällä mallilla, mutta niiden hyödyntäminen vaatii vielä kehittämistä. Vielä on kysymysmerkkinä, miten esimerkiksi Suomessa aggregaattori voi ohjata poolina akullisia aurinkosähköjärjestelmiä, tai mitä rajapintaa se käyttäisi virtuaalivoimalaitoksen kautta yksittäisten lämpöpumppujen ohjaamiseen.
