--- a/main.tex
+++ b/main.tex
@@ -135,7 +135,7 @@
 
 %%%%% Abstracts and preface.
 
-%\abstract{tex/tiivistelma.tex}
+\abstract{tex/tiivistelma.tex}
 
 %\preface{tex/alkusanat.tex}{Tampereella}
 
