Lontoonkielinen otsikko tiivistelmään.

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 
 %%%%% PREAMBLE %%%%%
 
-\nonstopmode
+% \nonstopmode
 \documentclass{tauthesis}
 
 % The glossaries package throws a warning:
@@ -104,11 +104,11 @@
 
 %%%%% Thesis information and title page.
 
-\title{Lämpöpumppujen ja aurinkosähköjärjestelmien kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}
+\title{Lämpöpumppujen ja aurinkosähköjärjestelmien kommunikaatiorajapinnat ja niiden hyödyntämismahdollisuudet}{Communication interfaces of heat pumps and PV-systems and their utilisation possibilities}
 \subtitle{Luonnos: versio 4}
 
 % The author name.
-\author{Ilmari Marttila \\ Niko Kangasniemi}
+\author{Ilmari Marttila ja Niko Kangasniemi}
 
 % The examiner information.
 % If your work has multiple examiners, replace with
