--- a/tex/ilmari_references.bib
+++ b/tex/ilmari_references.bib
@@ -248,6 +248,11 @@ title = {Valtioneuvoston asetus sähköntoimitusten selvityksestä ja mittaukses
 number = {5.2.2009/66}
 }
 
+@misc{reserviLaki,
+title = {Laki sähköntuotannon ja -kulutuksen välistä tasapainoa varmistavasta tehoreservistä},
+number = {11.2.2011/117}
+}
+
 @misc{enwg,
 title = { EnWG §14a Steuerbare Verbrauchseinrichtungen in Niederspannung; Verordnungsermächtigung},
 url = {https://www.gesetze-im-internet.de/enwg_2005/__14a.html},
