--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -36,7 +36,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Uusiutuvien energialähteiden käyttö sähköntuotannossa tuo omat haasteensa tehotasapainon ylläpitoon. Eniten käytettyjen uusiutuvien energialähteiden, eli aurinko- ja tuulivoiman, tuotanto riippuu voimakkaasti säästä ja vuorokaudenajasta. Kasvava uusiutuvien energialähteiden käyttö luo entisestään tarvetta säätövoimalle.\parencite{energiateollisuus} Säätövoima on kuitenkin huomattavasti kalliimpaa kuin perusvoima. Kulutushuippujen aikana käytettävien huippuvoimalaitosten polttoainekulut ovat suuret, niiden käyttäessä sähköntuotantoon esimerkiksi maakaasua tai hiiltä. Säätövoimaksi hyvin soveltuvaa vesivoimaa ei myöskään ole tarjolla määrättömästi. Sähköenergian varastointia ei nähdä vielä ratkaisuna uusiutuvan sähköntuotannon vaihteluihin, sillä akustojen kustannukset ovat vielä suuret. Monesta tekijästä johtuen sähkön tuotanto on muuttumassa vähemmän joustavaksi.
 
-  Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia ongelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa.\parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle.
+  Yksi tapa ratkaista sähköntuotannon joustamattomuuden aiheuttamia ongelmia on kysyntäjousto, jossa tuotannon sijasta säädellään sähkön kulutusta reaaliajassa, etukäteen tehdyn suunnitelman mukaan tai ohjaamalla kuluttajaa tiettyihin valintoihin. Kysyntäjoustoa voidaan toteuttaa monella tapaa.\parencite{fingrid} Yksi tapa on ohjata sähkön kulutusta hinnoittelun avulla. Tuntihinnoitellun sähkön hintaa kuluttajalle säädellään tuotannon ja kulutuksen mukaan, suurimman hinnan osuessa suurimman kulutuksen ajalle. Tämä kannustaa kuluttajia siirtämään sähkönkulutustaan pois vilkkaimmilta sähkökäyttötunneilta tehden kuluttajien tehonkulutuksesta kokonaisuudessaan tasaisempaa.
 
   Sähköverkossa olevilla suurilla yhtenäisillä kuormilla, joiden kulutusta pystytään ohjaamaan, voidaan toteuttaa kysyntäjoustoa\parencite{fingrid}. Suomessa on käytössä noin miljoona (vuonna 2019) lämpöpumppua\parencite{sulpu}. Erittäin kylmän sään akana lämpöpumput ovat käynnissä pidempiä aikoja ja useammin, jolloin niiden yhteenlaskettu teho on merkittävä tehotasapainon säilyttämisen kannalta. Suurimman lämmitystehontarpeen aikana saatetaan myöskin käyttää lämpöpumpun yhteyteen asennettua lisälämmitysvastusta, jolloin yksittäisen lämpöpumpun sähköteho nousee selvästi.
 
@@ -61,6 +61,8 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
   Sopivan lämpöpumppupoolin ohjauksella voidaan alentaa muuntopiirin tai syötetyn alueen huipputehoa. Riippuen alueesta, lämpöpumput ovat hyvä valinta ohjattavaksi kuormaksi. Uusilla rakennettavilla asuinalueilla, missä kaukolämpö ei ole käytössä, on todennäköisesti suurimmassa osassa asuinrakennuksia lämpöpumppu. Myöskin vanhaa rakennuskantaa peruskorjattaessa lämpöpumput valitaan usein lämmitysjärjestelmän osaksi. Normaalissa omakotitalossa lämpöpumppu on todennäköisesti suurin yksittäinen sähköä kuluttava laite, mikä tekee siitä edelleen hyvän valinnan ohjattavaksi kuormaksi.
 
   Lämpöpumppupoolin ohjauksesta on myös hyötyä hieman pidemmän sähkökatkon yhteydessä. Sähkökatkon kestäessä hieman pidempään, kylmenevät lämpöpumppujen lämmittämät kohteet. Näin ollen sähköjen palatessa, käytännössä kaikki muuntopiirin lämpöpumput käynnistyvät samaan aikaan. Mikäli kaikki tai osa lämpöpumpuista on varustettu suoraan verkkojännitteeseen kytketyllä oikosulkumoottorilla, voi niiden yhteenlaskettu käynnistysvirtapiikin aikainen tehon kulutus olla huomattavan korkea. Mikäli lämpöpumppujen rajapinnat mahdollistavat yksittäisten lämpöpumppujen ohjaamisen keskitetysti, voidaan sähköjen takaisinkytkeytymisen aiheuttamaan kulutuspiikkiä tasoittaa.
+
+  Mikäli yksittäisellä asiakkaalla on sähkön siirrossa käytössä tehotariffi, eli huipputehoon pohjautuva sähkön siirron hinnoittelu, voidaan kotitalouden huipputehon rajoittamisella saavuttaa taloudellisia hyötyjä. Huipputehoa voidaan rajoittaa esimerkiksi laskemalla invertteriohjatun pumpun tehoa päiväsaikaan, kun muutakin kulutusta on. Kotiautomaation avulla voidaan taas estää lämpöpupun käyminen samaan aikaan muiden suurien kuormien kuten saunan kanssa.
 
   Voidaan myös ajatella, etteivät lämpöpumput ole kaikkein kriittisimpiä syötettäviä kohteita. Mikäli sähköpulan takia on tarpeen rajoittaa kulutusta, on hyvä, jos kuitenkin pystytään takaamaan kriittiset toiminnot, kuten valaistus, kunnallistekniikan toiminta tai kylmälaitteiden käynti. Suomessa useimmissa omakotitaloissa on kuitenkin edelleen tulisija, jolloin lämpöpumppujen jatkuva päällä oleminen ei ole välttämätöntä lyhyillä, muutaman vuorokauden aikaväleillä. Mikäli sähköpulan aikana voidaan keskitetysti rajoittaa lämpöpuppujen käyttöä, saatetaan vähentää tarvetta alueiden kokonaan jännitteettömiksi kytkemiseen.
 
